--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width"/>
     <title>Lizzard Flash</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,400i" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="node_modules/firebaseui/dist/firebaseui.css" />
+    <link rel="stylesheet" href="/assets/style.css">
   </head>
   <body>
-    <div id="app">
-      <router-view></router-view>
+    <div class='container-fluid'>
+      <div id="app">
+        <router-view></router-view>
+      </div>
     </div>
     <script src="/dist/build.js"></script>
   </body>
