--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,400i" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="node_modules/firebaseui/dist/firebaseui.css" />
     <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="/assets/spinner.css">
   </head>
   <body>
     <div class='container-fluid'>
