--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link type="text/css" rel="stylesheet" href="node_modules/firebaseui/dist/firebaseui.css" />
     <link rel="stylesheet" href="/assets/style.css">
     <link rel="stylesheet" href="/assets/spinner.css">
+    <link rel="stylesheet" href="/assets/card.css">
+    <link rel="stylesheet" href="/assets/scaling.css">
   </head>
   <body>
     <div class='container-fluid'>
