--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="/assets/styles/main.css">
     <link rel="stylesheet" href="/assets/styles/headers.css">
     <link rel="stylesheet" href="/assets/styles/button.css">
+    <link rel="stylesheet" href="/assets/styles/card.css">
     <!-- <link rel="stylesheet" href="/assets/style.css">
     <link rel="stylesheet" href="/assets/spinner.css">
-    <link rel="stylesheet" href="/assets/card.css">
     <link rel="stylesheet" href="/assets/scaling.css"> -->
   </head>
   <body>
